@@ -14,6 +14,7 @@ Licence terms: LGPL (see licence.txt)
 - VLC API improved to work with 1.0.0.
 - VLC and Flash player do not have a loading message (was causing problems).
 - F5 is blocked for plugin based objects to avoid page reload.
+- Web server allows to plug content providers.
 - JS line comments and escaping are removed for browsers where it is not needed.
 - Browser window size was incorrectly set if JS specified only width or height.
 
